<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MobilActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:text="Data Peminjam"
        android:layout_marginTop="16dp"
        android:textAllCaps="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="nama"
        android:textAllCaps="true" />
    <EditText
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="nama"
        android:inputType="textCapWords" />
    <TextView
        android:id="@+id/jk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="jenis kelamin"
        android:layout_marginTop="16dp"
        android:textAllCaps="true" />
        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/lk"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lk"/>
            <RadioButton
                android:id="@+id/pr"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pr"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="kontak"
        android:textAllCaps="true" />
    <EditText
        android:id="@+id/telp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nomor Telpon"
        android:inputType="textCapWords" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="pekerjaan"
        android:textAllCaps="true"
        />
    <EditText
        android:id="@+id/pekerjaan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Pekerjaan"
        android:inputType="textCapWords" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="Alamat"
        android:textAllCaps="true"
        />
    <EditText
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Alamat"
        android:inputType="textCapWords" />
    <TextView
        android:id="@+id/jkendaraan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Jenis Kendaraan"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        />
    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/motor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor1"/>
        <RadioButton
            android:id="@+id/motor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor2"/>
        <RadioButton
            android:id="@+id/motor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor3"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Lama peminjaman"
        android:layout_marginTop="16dp"
        android:textAllCaps="true" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="+" />
    </LinearLayout>
    <Button
        android:id="@+id/kirim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="kirim"
        android:text="Kirim Nota" />

</LinearLayout>
</ScrollView>